# Automatic-Differentiation

./: .buildinfo  .gitignore  AutoDiff.graphvis.html  AutoDiff.html  AutoDiff.optim.html  Dockerfile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: coverage.yml  sphinx_build.yml  test.yml
AutoDiff/: __init__.py  forward.py  node.py  reverse.py  rnode.py
AutoDiff/graphvis/: __init__.py  computationGraph  plot_computation_graph.py
AutoDiff/optim/: __init__.py  newton.py  sgd.py
_modules/: index.html
_modules/AutoDiff/: forward.html  node.html  reverse.html  rnode.html
_sources/: index.rst.txt
_static/: class_index.html  function_index.html  index.html  status.json  z_358e5dae75301432___init___py.html  z_358e5dae75301432_forward_py.html  z_358e5dae75301432_node_py.html  z_358e5dae75301432_reverse_py.html  z_358e5dae75301432_rnode_py.html  z_ccfc285d2077e5be___init___py.html  z_ccfc285d2077e5be_newton_py.html  z_ccfc285d2077e5be_sgd_py.html  z_d5156a3d802d57fc___init___py.html  z_d5156a3d802d57fc_plot_computation_graph_py.html
docs/: milestone2_progress.md
docs/source/: AutoDiff.graphvis.rst  AutoDiff.optim.rst  AutoDiff.rst  conf.py  modules.rst
docs/src/: documentation.ipynb  milestone1.ipynb  (+1 more)
example/: forward_mode.py  newton.py  plot_graph.py  reverse_mode.py  sgd.py
test/: run_coverage.sh  run_test.sh  test_forward.py  test_node.py  test_optimization.py  test_plot_computation_graph.py  test_reverse.py  test_rnode.py
(+3 files in other folders)
