[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "AutoDiff-Team01"
version = "1.4"
authors = [
    {name="Yuqing Pan, Sijia Li, Catherine Ni, Jiashu Xu"},
    {email="cni@fas.harvard.edu"}
]
description = "AutoDiff: An Automatic Differentiation package that can make your life easier!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://code.harvard.edu/CS107/team01"
"Bug Tracker" = "https://code.harvard.edu/CS107/team01/issues"
